# SmaReverse-Vending-Machine

./: .gitignore  README.md  UI.py  UI_2.py  UI_gif.py  backend_count.py  clear.py  copy_image.py  get_library.py  get_zone.py  main.py  pyproject.toml  requirements.txt  split_dataset.py  test.py  test_3sp.py  testyolo.py  toUart.py
code_classify/: servo.ino
sumary/: sensor.docx  tieu_chi.docx  ~$eu_chi.docx
tracking/: bytetrack.yaml
xprinter/: check_xprinter.py  test_xprint.py
